# venom

./: .gitignore  AGENTS.md  Makefile  README.md  go.mod  go.sum
.github/workflows/: go.yml  python.yml
api/: venom.pb.go  venom.proto  venom_grpc.pb.go
clients/go/venomctl/: main.go
clients/python/: pyproject.toml
clients/python/examples/: basic_client.py
clients/python/src/venomctl/: __init__.py  exceptions.py  process.py  venom_pb2.py
clients/python/tests/: __init__.py  test_client.py  test_types.py
clients/python/venom_client/: __init__.py  client.py  test_proto.py  types.py  venom_pb2_grpc.py
cmd/venomctl/: main.go
cmd/venomd/: main.go
daemon/: monitor.go  procmanager.go  procmanager_test.go  server.go  server_test.go
docs/: api.md  architecture.md  developing.md
internal/daemon/: logbuffer.go  monitor.go  monitor_test.go  procmanager.go  procmanager_test.go  server.go
proto/: venom.proto
scripts/: build.sh  clean.sh  test.sh
